plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.115'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()

    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    //jei
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }

    //jei
    maven {
        url = "https://modmaven.dev"
    }

    //favouriteless
    maven {
        url = "https://maven.favouriteless.net/releases"
    }

    //curios
    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }

    //modrinth
    maven {
        url = "https://api.modrinth.com/maven"
    }

    //tyson the ember
    repositories {
        maven { url = 'https://maven.tysontheember.dev' }
    }

    repositories {
        exclusiveContent {
            forRepository {
                maven {
                    url "https://cursemaven.com"
                }
            }
            filter {
                includeGroup "curse.maven"
            }
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {

    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

  //  accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

  //  validateAccessTransformers = true

/*    accessTransformers {
        publish file("src/main/resources/META-INF/accesstransformer.cfg")
    }

    interfaceInjectionData {
        from "src/main/resources/neobackports.interfaces.json"
        publish file("src/main/resources/neobackports.interfaces.json")
    }*/

    runs {
        client {
            client()

            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}


dependencies {
    //tiny multiblock lib
    jarJar(modImplementation("maven.modrinth:tiny-multiblock-lib:forge-1.20.1-${tiny_multiblock_lib_version}"))

    //NeoBackports
    jarJar(modImplementation("net.nikdo53.neobackports:NeoBackports:${neobackports_version}"))
    interfaceInjectionData("net.nikdo53.neobackports:NeoBackports:${neobackports_version}")
    interfaceInjectionData("net.nikdo53.neobackports:NeoBackports:${neobackports_version}")

    //EMI
    modCompileOnly "dev.emi:emi-forge:${emi_version}:api"
    modRuntimeOnly "dev.emi:emi-forge:${emi_version}"

    //JEI
    modCompileOnly("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    //runtimeOnly("mezz.jei:jei-${mc_version}-neoforge:${jei_version}")

    //quality foods compat
    modCompileOnly("maven.modrinth:quality-food:2.3.0-1.20.1")
    //runtimeOnly("maven.modrinth:quality-food:vLFBpk1n")

    //pipez
    //runtimeOnly "maven.modrinth:pipez:z20ZR1YE"

    //let's do winery
    modCompileOnly "maven.modrinth:lets-do-vinery:1.4.41-forge,1.20.1"
    //runtimeOnly "maven.modrinth:lets-do-vinery:ZywXpLC6"

    //let's do brewery
    modCompileOnly "maven.modrinth:lets-do-brewery-farmcharm-compat:2.0.6-forge,1.20.1"
    //runtimeOnly "maven.modrinth:lets-do-brewery-farmcharm-compat:vzXZ4Pak"

    //Let's Do Farm & Charm
    //compileOnly "maven.modrinth:lets-do-farm-charm:muipCbfC"
    //runtimeOnly "maven.modrinth:lets-do-farm-charm:muipCbfC"

    //Architectury API
    modCompileOnly "maven.modrinth:architectury-api:9.2.14+forge"
    //runtimeOnly "maven.modrinth:architectury-api:ZxYGwlk0"

    //Create: Numismatics
    modCompileOnly "maven.modrinth:numismatics:1.0.15+forge-mc1.20.1"
    //runtimeOnly "maven.modrinth:numismatics:KMFhYqZ9"

    //Create
    modCompileOnly "maven.modrinth:create:mc1.20.1-6.0.8"
    //runtimeOnly "maven.modrinth:create:n7NADxiG"

    //Lightman's Currency
    modCompileOnly "maven.modrinth:lightmans-currency:1.20.1-2.3.0.4e"
    //runtimeOnly "maven.modrinth:lightmans-currency:DCVYBw7Y"

}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])

    finalizedBy('reobfJar')
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java

        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

java {
    withJavadocJar()
    withSourcesJar()
}


var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version        : minecraft_version,
            minecraft_version_range  : minecraft_version_range,
            forge_version            : forge_version,
            forge_version_range      : forge_version_range,
            loader_version_range     : loader_version_range,
            mod_id                   : mod_id,
            mod_name                 : mod_name,
            mod_license              : mod_license,
            mod_version              : mod_version,
            mod_authors              : mod_authors,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
legacyForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
